Make canvas full size (Maybe only an issue on Firefox?)

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -1,10 +1,17 @@
 body,
-html {
+html,
+#root {
   font-family: "Open Sans", sans-serif;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
   color: #777;
   font-weight: 400;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+#root,
+.full-size {
   width: 100% !important;
   height: 100% !important;
 }
